QDataStream: Be a bit more verbose about operator>>(char *&)

This also fixes a few "sloppy" mentionings of "new" into "new []".

Task-number: QTBUG-30777
Change-Id: I3f4add07777b59cd09cac97b672c73273b3b97eb
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>

cregit: 649da796f54dd291c1b0e3c5b02a44cd34006a44 https://github.com/qt/qtbase/commit/649da796f54dd291c1b0e3c5b02a44cd34006a44